# tomcat-speechAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  asr_agent.yml  build.sh  config.json  docker-compose.yml  dockerfile  google.yml  speechAnalyzer.cpp  speech_context.txt
ASRAgent/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
ASRAgent/src/: JsonBuilder.cpp  JsonBuilder.h  Listener.h  SpeechWrapper.h  WebsocketSession.h  arguments.h  speechAnalyzer.cpp  util.cpp  util.h
audio/: audio.raw
conf/: column_map.txt  external_audio_test.conf
conf/is09-13/: IS13_ComParE.conf  speechAnalyzer.conf
data/test/: README.md  audio.raw
protobuf-test/: CMakeLists.txt  streaming.cc
speechAnalyzer/: .Dockerfile.swp  CMakeLists.txt  Dockerfile  docker-compose.yml  google_application_credentials.json  speech_context.txt
speechAnalyzer/conf/: external_audio_test.conf
speechAnalyzer/data/test/: README.md
speechAnalyzer/src/: ASRProcessor.cpp  ASRProcessor.h  DBWrapper.cpp  DBWrapper.h  GlobalMosquittoListener.cpp  JsonBuilder.cpp  OpensmileListener.cpp  OpensmileListener.h  OpensmileSession.cpp  OpensmileSession.h  arguments.h  base64.c  main.cpp  util.cpp  util.h
src/: .DBWrapper.h.swp  .gitignore  ASRProcessor.cpp  ASRProcessor.h  ChunkListener.cpp  ChunkListener.h  DBWrapper.cpp  DBWrapper.h  Definitions.h  GlobalMosquittoListener.cpp  GlobalMosquittoListener.h  HTTPSession.h  HTTPSession.hpp  JsonBuilder.cpp  JsonBuilder.cpp.orig  JsonBuilder.h  JsonBuilder.hpp  Listener.hpp  Manager.cpp  Manager.h  Mosquitto.cpp  Mosquitto.h  OpensmileProcessor.cpp  OpensmileProcessor.h  OpensmileSession.cpp  OpensmileSession.h  SpeechWrapper.cpp  SpeechWrapper.h  SpeechWrapperVosk.cpp  SpeechWrapperVosk.cpp.orig  SpeechWrapperVosk.h  TrialListener.cpp  TrialListener.h  Types.h  WebsocketSession.h  WebsocketSession.hpp  `  arguments.cpp  arguments.h  asrserver.cpp  (+12 more)
test/: smileapi_test.cpp
tools/: build.sh  createRandomData.cpp  install_dependencies_macports  install_opensmile_from_source
